Fixed events info-message positioning on mobile

--- a/src/codex/components/SearchPanels/EventSearchPanel/index.module.scss
+++ b/src/codex/components/SearchPanels/EventSearchPanel/index.module.scss
@@ -128,6 +128,11 @@
     min-width: 21rem;
     flex-basis: 100%;
     justify-content: flex-end;
+
+    @media (max-width: $breakpoint-mobile) {
+      flex-basis: 100%;
+      justify-content: center;
+    }
   }
 }
 
